Add register endpoint
